{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 382,
  "lineage": "dd57ed8a-91eb-3a56-8f00-c54cb5e2f909",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app1-vip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.10.5",
            "association_id": "eipassoc-09b5e915363585bec",
            "domain": "vpc",
            "id": "eipalloc-07f5b05cc3b09bd68",
            "instance": "i-0bd4711d9fc722e39",
            "network_interface": "eni-0577b14a6975a3dda",
            "private_dns": "ip-10-0-10-5.ec2.internal",
            "private_ip": "10.0.10.5",
            "public_dns": "ec2-52-73-207-109.compute-1.amazonaws.com",
            "public_ip": "52.73.207.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alam-tf-app1-eip-552d",
              "f5_cloud_failover_label": "mydeployment",
              "f5_cloud_failover_vips": "10.0.10.5,10.0.11.5"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.bigip-ext",
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ext-eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.10.4",
            "association_id": "eipassoc-0cd359295eb275cc7",
            "domain": "vpc",
            "id": "eipalloc-0ff843b99430554d5",
            "instance": "i-0bd4711d9fc722e39",
            "network_interface": "eni-0577b14a6975a3dda",
            "private_dns": "ip-10-0-10-4.ec2.internal",
            "private_ip": "10.0.10.4",
            "public_dns": "ec2-34-196-133-239.compute-1.amazonaws.com",
            "public_ip": "34.196.133.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alam-tf-ext-eip-0-552d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.bigip-ext",
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.11.4",
            "association_id": "eipassoc-0655ada9179334bac",
            "domain": "vpc",
            "id": "eipalloc-006b841929251393e",
            "instance": "i-0aed5a050b8c7bfd7",
            "network_interface": "eni-0db4d3aa38d052da3",
            "private_dns": "ip-10-0-11-4.ec2.internal",
            "private_ip": "10.0.11.4",
            "public_dns": "ec2-54-156-49-189.compute-1.amazonaws.com",
            "public_ip": "54.156.49.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alam-tf-ext-eip-1-552d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.bigip-ext",
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mgmt-eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.4",
            "association_id": "eipassoc-0257402e4df4cb581",
            "domain": "vpc",
            "id": "eipalloc-02a5f57b3e0827073",
            "instance": "i-0bd4711d9fc722e39",
            "network_interface": "eni-0846a45c47c446ef7",
            "private_dns": "ip-10-0-0-4.ec2.internal",
            "private_ip": "10.0.0.4",
            "public_dns": "ec2-54-225-52-208.compute-1.amazonaws.com",
            "public_ip": "54.225.52.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alam-tf-mgmt-eip-0-552d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.bigip-mgmt",
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.4",
            "association_id": "eipassoc-0896766eb5e7cfc64",
            "domain": "vpc",
            "id": "eipalloc-0392b2d7518d51629",
            "instance": "i-0aed5a050b8c7bfd7",
            "network_interface": "eni-09219edb89410dbae",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-147-82-231.compute-1.amazonaws.com",
            "public_ip": "54.147.82.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "alam-tf-mgmt-eip-1-552d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.bigip-mgmt",
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bigip-vm",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03618146485508c81",
            "arn": "arn:aws:ec2:us-east-1:284202514452:instance/i-050990539fe5a7e99",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "alam-tf-CFE_Profile-552d",
            "id": "i-050990539fe5a7e99",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "key_name": "Alam-kp-va",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0846a45c47c446ef7"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0577b14a6975a3dda"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-0f8af3b678dc7b849"
              }
            ],
            "primary_network_interface_id": "eni-0846a45c47c446ef7",
            "private_dns": "ip-10-0-0-4.ec2.internal",
            "private_ip": "10.0.0.4",
            "public_dns": "ec2-54-225-52-208.compute-1.amazonaws.com",
            "public_ip": "54.225.52.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 228,
                "volume_id": "vol-08e4c3091d6a19c12",
                "volume_size": 76,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08ab7014ba7b3fd9c",
            "tags": {
              "Name": "alam-tf-bigip-vm-0-552d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-014e784b634a00085"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.CFE_profile",
            "aws_network_interface.bigip-ext",
            "aws_network_interface.bigip-int",
            "aws_network_interface.bigip-mgmt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03618146485508c81",
            "arn": "arn:aws:ec2:us-east-1:284202514452:instance/i-07cc6144133cd271f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "alam-tf-CFE_Profile-552d",
            "id": "i-07cc6144133cd271f",
            "instance_state": "running",
            "instance_type": "m4.xlarge",
            "ipv6_address_count": 0,
            "key_name": "Alam-kp-va",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-09219edb89410dbae"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-0db4d3aa38d052da3"
              },
              {
                "delete_on_termination": false,
                "device_index": 2,
                "network_interface_id": "eni-005ff007241478aaf"
              }
            ],
            "primary_network_interface_id": "eni-09219edb89410dbae",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-147-82-231.compute-1.amazonaws.com",
            "public_ip": "54.147.82.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 228,
                "volume_id": "vol-0bfdfe81a65f78895",
                "volume_size": 76,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bab6b21084562a1a",
            "tags": {
              "Name": "alam-tf-bigip-vm-1-552d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-014e784b634a00085"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.CFE_profile",
            "aws_network_interface.bigip-ext",
            "aws_network_interface.bigip-int",
            "aws_network_interface.bigip-mgmt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:internet-gateway/igw-08b68b2b610009c2d",
            "id": "igw-08b68b2b610009c2d",
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bigip-ext",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-077e1d18cb339b75a",
                "device_index": 1,
                "instance": "i-0bd4711d9fc722e39"
              }
            ],
            "id": "eni-0577b14a6975a3dda",
            "mac_address": "0e:44:56:e7:8a:c5",
            "private_dns_name": "ip-10-0-10-5.ec2.internal",
            "private_ip": "10.0.10.5",
            "private_ips": [
              "10.0.10.4",
              "10.0.10.5"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-014e784b634a00085"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e422ba14286f4abc",
            "tags": {
              "Name": "alam-tf-bigip-ext-0-552d",
              "f5_cloud_failover_label": "mydeployment"
            }
          },
          "dependencies": [
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0484b8acff190bab3",
                "device_index": 1,
                "instance": "i-0aed5a050b8c7bfd7"
              }
            ],
            "id": "eni-0db4d3aa38d052da3",
            "mac_address": "02:81:5f:74:d7:31",
            "private_dns_name": "ip-10-0-11-5.ec2.internal",
            "private_ip": "10.0.11.5",
            "private_ips": [
              "10.0.11.4",
              "10.0.11.5"
            ],
            "private_ips_count": 1,
            "security_groups": [
              "sg-014e784b634a00085"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07066ef47e631576e",
            "tags": {
              "Name": "alam-tf-bigip-ext-1-552d",
              "f5_cloud_failover_label": "mydeployment"
            }
          },
          "dependencies": [
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bigip-int",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0586dcdaafdbd9319",
                "device_index": 2,
                "instance": "i-0bd4711d9fc722e39"
              }
            ],
            "id": "eni-0f8af3b678dc7b849",
            "mac_address": "0e:44:f7:50:4d:09",
            "private_dns_name": "ip-10-0-20-4.ec2.internal",
            "private_ip": "10.0.20.4",
            "private_ips": [
              "10.0.20.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b626f1bec368d3d1"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d05f7ebf2635386c",
            "tags": {
              "Name": "alam-tf-bigip-int-0-552d",
              "f5_cloud_failover_label": "mydeployment"
            }
          },
          "dependencies": [
            "aws_security_group.sg-main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-08e5711050d7a6b21",
                "device_index": 2,
                "instance": "i-0aed5a050b8c7bfd7"
              }
            ],
            "id": "eni-005ff007241478aaf",
            "mac_address": "02:62:ec:55:99:13",
            "private_dns_name": "ip-10-0-21-4.ec2.internal",
            "private_ip": "10.0.21.4",
            "private_ips": [
              "10.0.21.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b626f1bec368d3d1"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04603d1e18ccce9bb",
            "tags": {
              "Name": "alam-tf-bigip-int-1-552d",
              "f5_cloud_failover_label": "mydeployment"
            }
          },
          "dependencies": [
            "aws_security_group.sg-main",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "bigip-mgmt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-089f5a08073f9b430",
                "device_index": 0,
                "instance": "i-0bd4711d9fc722e39"
              }
            ],
            "id": "eni-0846a45c47c446ef7",
            "mac_address": "0e:10:f3:e2:de:2b",
            "private_dns_name": "ip-10-0-0-4.ec2.internal",
            "private_ip": "10.0.0.4",
            "private_ips": [
              "10.0.0.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-014e784b634a00085"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08ab7014ba7b3fd9c",
            "tags": {
              "Name": "alam-tf-bigip-mgmt-0-552d"
            }
          },
          "dependencies": [
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0abc6461caa6545ff",
                "device_index": 0,
                "instance": "i-0aed5a050b8c7bfd7"
              }
            ],
            "id": "eni-09219edb89410dbae",
            "mac_address": "02:ac:4c:22:86:85",
            "private_dns_name": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "private_ips": [
              "10.0.1.4"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-014e784b634a00085"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bab6b21084562a1a",
            "tags": {
              "Name": "alam-tf-bigip-mgmt-1-552d"
            }
          },
          "dependencies": [
            "aws_security_group.sg-Internet",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08b68b2b610009c2d",
            "id": "r-rtb-069504346627828501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06950434662782850",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alienIP-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0784cff779cd35a11",
            "owner_id": "284202514452",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "192.168.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0f8af3b678dc7b849",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alam-tf-alienIP-rt-552d",
              "f5_cloud_failover_label": "mydeployment"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "aws_network_interface.bigip-int",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dac5cba563d2b3f9",
            "owner_id": "284202514452",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cafe64d66e28a10f",
            "owner_id": "284202514452",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06950434662782850",
            "owner_id": "284202514452",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b68b2b610009c2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007f5a8872e968634",
            "route_table_id": "rtb-0dac5cba563d2b3f9",
            "subnet_id": "subnet-0d05f7ebf2635386c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0860c0f22a1bfa01c",
            "route_table_id": "rtb-0cafe64d66e28a10f",
            "subnet_id": "subnet-04603d1e18ccce9bb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a9bc5ef8033a58",
            "route_table_id": "rtb-06950434662782850",
            "subnet_id": "subnet-08ab7014ba7b3fd9c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc0e9441232691ca",
            "route_table_id": "rtb-06950434662782850",
            "subnet_id": "subnet-0bab6b21084562a1a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe49b4805a9bf45",
            "route_table_id": "rtb-06950434662782850",
            "subnet_id": "subnet-0e422ba14286f4abc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fef5753374581b0d",
            "route_table_id": "rtb-06950434662782850",
            "subnet_id": "subnet-07066ef47e631576e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-Internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:security-group/sg-014e784b634a00085",
            "description": "Internet facing rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014e784b634a00085",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "UDP 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "71.166.46.223/32",
                  "69.251.248.77/32",
                  "10.0.0.0/16"
                ],
                "description": "Home",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alam-tf-sg-Internet-552d",
            "name_prefix": null,
            "owner_id": "284202514452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alam-tf-sg-Internet-552d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:security-group/sg-0b626f1bec368d3d1",
            "description": "main rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b626f1bec368d3d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "71.166.46.223/32"
                ],
                "description": "Home",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alam-tf-sg-main-552d",
            "name_prefix": null,
            "owner_id": "284202514452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alam-tf-sg-main-552d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-0d05f7ebf2635386c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0d05f7ebf2635386c",
            "map_public_ip_on_launch": false,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-04603d1e18ccce9bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-04603d1e18ccce9bb",
            "map_public_ip_on_launch": false,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-08ab7014ba7b3fd9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08ab7014ba7b3fd9c",
            "map_public_ip_on_launch": true,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-0bab6b21084562a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bab6b21084562a1a",
            "map_public_ip_on_launch": true,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-0e422ba14286f4abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0e422ba14286f4abc",
            "map_public_ip_on_launch": true,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:subnet/subnet-07066ef47e631576e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-07066ef47e631576e",
            "map_public_ip_on_launch": true,
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0625badb0f8304447"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:284202514452:vpc/vpc-0625badb0f8304447",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089d9d80e2b1ecb0b",
            "default_route_table_id": "rtb-038e64f537e885ee9",
            "default_security_group_id": "sg-014254d9a190d462c",
            "dhcp_options_id": "dopt-1d22f465",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0625badb0f8304447",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038e64f537e885ee9",
            "owner_id": "284202514452",
            "tags": {
              "Environment": "dev",
              "Name": "alam-tf-subnet-552d",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "random_id.id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "access_analyzer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "acm_pca",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "auto_scaling_plans",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "datasync",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ebs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elastic_inference_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticbeanstalk_health",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "emr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "qldb_session",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ses",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "workspaces",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}